<resources>
    <string name="app_name">Calculator 2.0</string>
    <string name="Exit">Выход</string>
    <string name="title">Калькулятор</string>
    <string name="result">result</string>
    <string name="input">input</string>
    <string name="div">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dif">-</string>
    <string name="mult">*</string>
    <string name="sum">+</string>
    <string name="zero">0</string>
    <string name="res">=</string>
    <string name="reset">reset</string>

</resources>