<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:title="@string/title"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/inputTextET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:textSize="24sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/outputTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="7">

        <Button
            android:id="@+id/buttonDivBTN"
            android:text="@string/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="right"
            android:layout_columnSpan="4"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/buttonOneBTN"
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonTwoBTN"
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonThreeBTN"
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonMultBTN"
            android:text="@string/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonFourBTN"
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonFiveBTN"
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonSixBTN"
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonDifBTN"
            android:text="@string/dif"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonSevenBTN"
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonEightBTN"
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonNineBTN"
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonSumBTN"
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            android:layout_rowSpan="3" />
        <Button
            android:id="@+id/buttonZeroBTN"
            android:text="@string/zero"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"/>
        <Button
            android:id="@+id/buttonResultBTN"
            android:text="@string/res"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"/>
        <Button
            android:id="@+id/buttonResetBTN"
            android:text="@string/reset"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"/>



    </GridLayout>

</LinearLayout>